Improved image data managing: takes less space to save image data, faster to send from server to client. Improved grid and list modes. Working on carousel

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
     "tailwindcss": "^3.3.3"
+  },
+
+  "scripts": {
+    "run" : "py server.py & npx tailwindcss -i ./static/src/input.css -o ./static/css/output.css --watch"
   }
 }
