Switch to a real db

--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
 	"type": "module",
 	"dependencies": {
 		"@fortawesome/free-solid-svg-icons": "^6.4.2",
-		"axios": "^1.4.0"
+		"axios": "^1.4.0",
+		"dotenv": "^16.4.1",
+		"mongodb": "^6.3.0"
 	}
 }
